tests/__snapshots__/api-toBeUniqueSymbol.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeUniqueSymbol: stderr 1`] = `
"Error: Type 'unique symbol' is not identical to type 'void'.

  14 |   expect(returnsUniqueSymbol()).type.toBeUniqueSymbol();
  15 | 
> 16 |   expect(returnsVoid()).type.toBeUniqueSymbol();
     |                              ^
  17 | });
  18 | 
  19 | test("is NOT unique symbol?", () => {

       at ./__typetests__/toBeUniqueSymbol.test.ts:16:30 ❭ is unique symbol?

Error: Type 'unique symbol' is identical to type 'unique symbol'.

  20 |   expect(returnsVoid()).type.not.toBeUniqueSymbol();
  21 | 
> 22 |   expect(returnsUniqueSymbol()).type.not.toBeUniqueSymbol();
     |                                          ^
  23 | });
  24 | 

       at ./__typetests__/toBeUniqueSymbol.test.ts:22:42 ❭ is NOT unique symbol?

"
`;

exports[`toBeUniqueSymbol: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeUniqueSymbol.test.ts
  × is unique symbol?
  × is NOT unique symbol?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
